--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -33,7 +33,8 @@
             </div>
           </div>
         </div>
-
+        <div class="header-bottom-line"></div>
+        
         <main class="container-xxl flex-grow-1">
           
           <div class="d-flex justify-content-between align-items-center mb-4">
